--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   const threshold = 0.999;
 
   async function loadModel() {
-      const model = await tf.loadLayersModel("./handsmodel/model.json");
+      const model = await tf.loadLayersModel("./handsmodel/handsmodel/model.json");
       return model;
   }
 
